[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
reqwest = "0.11.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.2"
uuid = {version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", default-features=false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
