[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
reqwest = "0.11.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13.2"
uuid = {version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", default-features=false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
once_cell = "1.16.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
claim = "0.5.0"
validator = "0.16.0"
fake = "2.5.0"

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
